[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/challenge.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/deck-button.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/cancel.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/confirm.png" type="Texture" id=4]
[ext_resource path="res://assets/background/challenge_scene.jpg" type="Texture" id=5]

[sub_resource type="DynamicFontData" id=1]
hinting = 0
font_path = "res://assets/font/regular.otf"

[sub_resource type="DynamicFont" id=2]
size = 50
use_mipmaps = true
use_filter = true
font_data = SubResource( 1 )

[sub_resource type="RectangleShape2D" id=3]

[node name="controller" type="Node2D"]
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 612.461, 612.627 )
scale = Vector2( 0.6, 0.6 )
texture = ExtResource( 5 )

[node name="scroll" type="ScrollContainer" parent="."]
margin_left = 66.0
margin_top = 55.0
margin_right = 1646.0
margin_bottom = 923.0
rect_scale = Vector2( 0.65, 0.65 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="anchor" type="GridContainer" parent="scroll"]
custom_constants/vseparation = 35
custom_constants/hseparation = 30
columns = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="confirm" type="Sprite" parent="."]
position = Vector2( -3.27911, 728.766 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 4 )
centered = false
offset = Vector2( 0, -22 )
region_enabled = true
region_rect = Rect2( 12, 12, 153, 51 )
script = ExtResource( 2 )

[node name="text" type="Label" parent="confirm"]
margin_left = 46.8118
margin_top = -17.9296
margin_right = 94.8118
margin_bottom = 18.0704
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "确认"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click" type="Area2D" parent="confirm"]
position = Vector2( 72.4784, 1.66656 )

[node name="rect" type="CollisionShape2D" parent="confirm/click"]
scale = Vector2( 7.03333, 1.96667 )
shape = SubResource( 3 )
disabled = true

[node name="cancel" type="Sprite" parent="."]
position = Vector2( 1149.29, 729.701 )
scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -138, -23 )
region_enabled = true
region_rect = Rect2( 9, 11, 141, 52 )
script = ExtResource( 2 )

[node name="text" type="Label" parent="cancel"]
margin_left = -85.4532
margin_top = -16.6113
margin_right = -37.4532
margin_bottom = 19.3887
rect_scale = Vector2( 0.5, 0.5 )
custom_fonts/font = SubResource( 2 )
text = "返回"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="click" type="Area2D" parent="cancel"]
position = Vector2( -66.5674, 0.83136 )

[node name="rect" type="CollisionShape2D" parent="cancel/click"]
scale = Vector2( 6.63333, 1.96667 )
shape = SubResource( 3 )

[node name="Tween" type="Tween" parent="."]

[connection signal="input_event" from="confirm/click" to="confirm" method="_on_click_input_event"]
[connection signal="mouse_entered" from="confirm/click" to="confirm" method="_on_click_mouse_entered"]
[connection signal="mouse_exited" from="confirm/click" to="confirm" method="_on_click_mouse_exited"]
[connection signal="input_event" from="cancel/click" to="cancel" method="_on_click_input_event"]
[connection signal="mouse_entered" from="cancel/click" to="cancel" method="_on_click_mouse_entered"]
[connection signal="mouse_exited" from="cancel/click" to="cancel" method="_on_click_mouse_exited"]
